# axon

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt
benchmarks/mnist/: mnist_benchmark.cpp  mnist_profile.cpp  plot_results.py
benchmarks/mnist/results/mnist_benchmark_3bb5b8e_2026-07-09T19:59:18/: raw.csv  summary.csv
docs/: README.md
docs/devlog/: 001-mnist-warmup-calibration.md  002-matmul-at-hotspot.md  003-matmul-raw-stride-indexing.md  004-elementwise-odometer-iteration.md  005-matmul-loop-order-dispatch.md  006-matmul-autovectorization-check.md  007-matmul-cache-blocking-evaluation.md  TEMPLATE.md
examples/: CMakeLists.txt  mnist_mlp.cpp  xor_demo.cpp
include/axon/: constants.hpp  dataloader.hpp  early_stopping.hpp  functional.hpp  linear.hpp  module.hpp  optimizer.hpp  relu.hpp  sequential.hpp  summary.hpp  tensor.hpp  utils.hpp
include/axon/datasets/: dataset.hpp  mnist.hpp
include/axon/modules/: linear.hpp  module.hpp  relu.hpp  sequential.hpp
include/axon/optimizers/: optimizer.hpp  sgd.hpp
scripts/: format.sh
src/: autograd.cpp  autograd.hpp  dataloader.cpp  early_stopping.cpp  functional.cpp  linear.cpp  relu.cpp  sequential.cpp  summary.cpp  tensor.cpp  utils.cpp  utils.hpp
src/autograd/: autograd.cpp  autograd.hpp
src/datasets/: mnist.cpp
src/modules/: linear.cpp  relu.cpp  sequential.cpp
src/optimizers/: sgd.cpp
tests/: CMakeLists.txt  autograd_test.cpp  dataloader_test.cpp  early_stopping_test.cpp  functional_test.cpp  grad_check.cpp  linear_test.cpp  relu_test.cpp  sequential_test.cpp  sgd_test.cpp  tensor_test.cpp  test_tensor.cpp
